--- a/source/styles/components/title.css
+++ b/source/styles/components/title.css
@@ -1,11 +1,27 @@
 .title {
-	font-size: 42px;
-	font-family: 'NeueMachina';
+	--space-y: 0;
+	--text-size: 42px;
+
+	margin-top: var(--space-y);
+	margin-bottom: var(--space-y);
+
+	font-size: var(--text-size);
+	font-family: "NeueMachina";
 	font-weight: 800;
 	line-height: 1;
-	margin-top: 0;
-	margin-bottom: 0;
 	word-wrap: break-word;
 }
 
+.title_size_small {
+	--text-size: 22px;
+}
 
+.title_size_large {
+	--text-size: 30px;
+}
+
+@media (min-width: 768px) { /* tablet */
+	.title_size_large {
+		--text-size: 60px;
+	}
+}
