--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -50,5 +50,7 @@
 @import "components/main/manual.css";
 @import "components/main/study.css";
 @import "components/main/subs.css";
-
-
+@import "components/reset-list.css";
+@import "components/c-breadcrumb.css";
+@import "components/back.css";
+@import "components/accordion.css";
