Update breadcrumb and back

--- a/source/styles/components/breadcrumb.css
+++ b/source/styles/components/breadcrumb.css
@@ -1,51 +1,33 @@
-.breadcrumb {
-	max-width: 328px;
-	text-align: left;
-	padding-left: 52px;
-	position: relative;
-	margin-bottom: 30px;
-	opacity: 0.8;
-}
-
-
-.breadcrumb__menu {
+.breadcrumb__list {
 	display: flex;
 	flex-wrap: wrap;
-	list-style: none;
-	padding-left: 0;
+	gap: 5px;
 }
 
+.breadcrumb__item::after {
+	--space-x: 5px;
 
-.breadcrumb__item:not(:last-child):after {
 	content: ">";
-	padding-left: 5px;
-	padding-right: 5px;
+
+	margin-right: var(--space-x);
+	margin-left: var(--space-x);
 }
 
-.breadcrumb__back {
-	all: unset;
-	height: 30px;
-	position: absolute;
-	width: 30px;
-	top: 50%;
-	left: 0;
-	transform: translateY(-50%);
-	background-color: #3D4057;
-	border-radius: 50%;
+.breadcrumb__item:last-child::after {
+	content: none;
 }
 
-.breadcrumb__svg {
-	position: relative;
-	left: 50%;
-	transform: translateX(-50%);
-	top: 5px;
+.breadcrumb__link {
+	--text-decoration: none;
+
+	color: #ffffff;
+	text-decoration: var(--text-decoration);
 }
 
-@media (min-width: 1200px) {
+.breadcrumb__link:hover {
+	--text-decoration: underline;
+}
 
-	.breadcrumb__svg {
-		position: relative;
-		left: 50%;
-		top: 3px;
-	}
+.breadcrumb__link[aria-current="page"]:hover {
+	--text-decoration: none;
 }
