--- a/source/styles/components/content/content.css
+++ b/source/styles/components/content/content.css
@@ -232,3 +232,22 @@
 	}
 
 }
+
+.content__box {
+	--space-y: 36px;
+
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	gap: 20px;
+	margin-bottom: 36px;
+}
+
+@media (min-width: 768px) { /* tablet */
+	.content__box {
+		--space-y: 40px;
+
+		max-width: 597px;
+		width: 100%;
+	}
+}
