--- a/source/styles/components/footer/footer.css
+++ b/source/styles/components/footer/footer.css
@@ -1,7 +1,3 @@
-.acces {
-	visibility: hidden;
-}
-
 .footer__text_media_desktop,
 .footer__social_media_desktop,
 .footer__load_media_desktop,
@@ -44,6 +40,12 @@
 	gap: 25px;
 	align-items: center;
 	font-family: 'NeueMachina';
+}
+
+@media (min-width: 768px) {
+	.footer {
+		align-items: flex-start;
+	}
 }
 
 .footer__top {
@@ -168,10 +170,6 @@
 		gap: 10px;
 	}
 
-	.social__icon {
-		height: 125px;
-		width: 54px;
-	}
 
 	.footer {
 		display: flex;
@@ -218,7 +216,7 @@
 		display: flex;
 		gap: 13px;
 		justify-content: center;
-		margin-bottom: 26px;
+		margin-bottom: 16px;
 	}
 
 	.footer__icon {
@@ -236,7 +234,7 @@
 	.footer__menu {
 		display: flex;
 		flex-direction: column;
-		gap: 12px;
+		gap: 19px;
 		align-items: flex-start;
 	}
 
@@ -250,4 +248,8 @@
 		font-family: 'NeueMachina';
 		font-weight: 300;
 	}
+}
+
+.footer__link {
+	color: #ffffff;
 }
