--- a/source/styles/components/interesting/interesting.css
+++ b/source/styles/components/interesting/interesting.css
@@ -1,9 +1,5 @@
 
 
-		.interesting {
-			padding: 30px 0;
-		}
-
 		.interesting__top {
 			display: flex;
 			justify-content: center;
@@ -13,6 +9,7 @@
 
 		.interesting__title {
 			font-weight: 600;
+			font-family: "FuturaPT";
 			font-size: 22px;
 			max-width: 145px;
 			text-align: left;
@@ -20,7 +17,7 @@
 
 		.interesting__button {
 			font-size: 14px;
-			padding: 10px 30px;
+			padding: 9px 21px;
 		}
 
 		.interesting__content {
