--- a/source/styles/components/link.css
+++ b/source/styles/components/link.css
@@ -11,12 +11,18 @@
 .link_level_new {
 	padding: 5px 21px 7px 29px;
 	color: rgba(255, 255, 255, 1);
-	font-family: 'Futura PT';
+	font-family: 'FuturaPT';
 	font-weight: 450;
 	background-color: #60AD76;
 	opacity: 0.9;
 	border-radius: 50px;
 	position: relative;
+}
+
+@media (min-width: 768px) { /* tablet */
+	.link_level_new {
+		font-size: 18px;
+	}
 }
 
 .link_level_new::before {
@@ -27,7 +33,7 @@
 	position: absolute;
 	width: 5px;
 	top: 50%;
-	left: 15%;
+	left: 17px;
 	transform: translateY(-50%);
 	background-color: #8CFCE2;
 	border-radius: 50%;
@@ -35,13 +41,19 @@
 
 .link_level_advanced {
 	padding: 5px 21px 7px 29px;
-	color: rgba(255, 255, 255, 1);
-	font-family: 'Futura PT';
+	color: #ffffff;
+	font-family: 'FuturaPT';
 	font-weight: 450;
-	background-color: #B18E1B;
+	background-color: #b18e1b;
 	opacity: 0.9;
 	border-radius: 50px;
 	position: relative;
+}
+
+@media (min-width: 768px) { /* tablet */
+	.link_level_advanced {
+		font-size: 18px;
+	}
 }
 
 .link_level_advanced::before {
@@ -52,7 +64,7 @@
 	position: absolute;
 	width: 5px;
 	top: 50%;
-	left: 10%;
+	left: 17px;
 	transform: translateY(-50%);
 	background-color: #FFC017;
 	border-radius: 50%;
@@ -61,12 +73,18 @@
 .link_level_pro {
 	padding: 5px 21px 7px 29px;
 	color: rgba(255, 255, 255, 1);
-	font-family: 'Futura PT';
+	font-family: 'FuturaPT';
 	font-weight: 450;
-	background-color: #602E3D;
+	background-color: #602e3d;
 	opacity: 0.8;
 	border-radius: 50px;
 	position: relative;
+}
+
+@media (min-width: 768px) { /* tablet */
+	.link_level_pro {
+		font-size: 18px;
+	}
 }
 
 .link_level_pro::before {
@@ -77,7 +95,7 @@
 	position: absolute;
 	width: 5px;
 	top: 50%;
-	left: 10%;
+	left: 17px;
 	transform: translateY(-50%);
 	background-color: #D92B4D;
 	border-radius: 50%;
