--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -22,7 +22,7 @@
 @import "components/text.css";
 @import "components/filter.css";
 @import "components/nouislider.css";
-@import "components/range.css";
+@import "components/form.css";
 
 
 @import "components/header-nav.css";
