--- a/source/styles/components/main/event.css
+++ b/source/styles/components/main/event.css
@@ -1,5 +1,5 @@
 .event {
-	margin-bottom: 30px;
+	padding: 30px 0;
 }
 
 .event__main-card {
@@ -9,11 +9,14 @@
 }
 
 .event__main-card--hand {
-	background-image: url('../images/main/event/hand.png');
+	background: url('../images/main/event/hand.png') no-repeat right bottom,
+		linear-gradient(104.9deg, #4D506C 0.54%, #212339 66.94%);
 }
 
 .event__main-card--head {
-	background-image: url('../images/main/event/head.png');
+	background: url('../images/main/event/head.png') no-repeat right bottom,
+		linear-gradient(79.81deg, #4D506C -60%, #212339 100.33%);
+	backdrop-filter: blur(26.0819px);
 }
 
 .event__content {
@@ -59,11 +62,14 @@
 	}
 
 	.event__main-card--hand {
-		background-image: url('../images/main/event/hands-desctop.png');
+		background: url('../images/main/event/hands-desctop.png') no-repeat right bottom,
+			linear-gradient(104.9deg, #4D506C 0.54%, #212339 66.94%);
 	}
 
 	.event__main-card--head {
-		background-image: url('../images/main/event/hand-decktop.png');
+		background: url('../images/main/event/hand-decktop.png') no-repeat right bottom,
+			linear-gradient(79.81deg, #4D506C -60%, #212339 100.33%);
+		backdrop-filter: blur(26.0819px);
 	}
 
 	.event__title {
