--- a/source/styles/components/main/study.css
+++ b/source/styles/components/main/study.css
@@ -2,11 +2,17 @@
 	margin-bottom: 30px;
 }
 
+.study__main-card-glossary {
+	background: transparent;
+	border: 1px solid #fff;
+}
+
 .study__title {
 	font-size: 22px;
 	line-height: 105.5%;
 	margin-bottom: 18px;
 }
+
 
 .study__content {
 	display: flex;
@@ -22,16 +28,34 @@
 
 .study__form {
 	margin-bottom: 23px;
+	position: relative;
+}
+
+.study__input {
+	all: unset;
+	border: 1px solid #8F93A4;
+	backdrop-filter: blur(4px);
+	border-radius: 20px;
+	padding: 12px 98px 12px 25px;
+
 }
 
 .study__form-button {
-	top: 107px;
-	right: 17%;
+	all: unset;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	right: 55px;
 }
+
+
+
 
 .study__text {
 	max-width: 270px;
 }
+
+
 
 .main-card__link-btn--active {
 	color: rgba(20, 34, 67, 1);
@@ -47,11 +71,9 @@
 		margin-bottom: 40px;
 	}
 
-
-
 	.study__main-card {
 		gap: 30px;
-padding-bottom: 99px;
+		padding-bottom: 99px;
 		width: 100%;
 
 	}
@@ -77,8 +99,12 @@ padding-bottom: 99px;
 
 
 	.main-card__link-btn {
-	position: absolute;
-	bottom: 30px;
+		position: absolute;
+		bottom: 30px;
+	}
+
+	.study__form-button {
+		right: 90px;
 	}
 
 }
