--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -56,3 +56,4 @@
 @import "components/reset-list.css";
 @import "components/back.css";
 @import "components/accordion.css";
+@import "components/c-menu.css";
