--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -57,3 +57,5 @@
 @import "components/back.css";
 @import "components/accordion.css";
 @import "components/c-menu.css";
+@import "components/logotype.css";
+@import "components/c-mobile-header.css";
