--- a/source/styles/base/global.css
+++ b/source/styles/base/global.css
@@ -1,12 +1,11 @@
 .page__body {
-	background-color: rgba(33, 35, 57, 1);
-	color: rgba(255, 255, 255, 1);
+	background-color: #212339;
+	color: #ffffff;
 	font-family: 'FuturaPT';
 	font-size: 16px;
-	font-weight: 400;
 	line-height: 1.3;
-	text-align: center;
 	margin: 0;
+	padding-top: var(--header-height);
 }
 
 .container {
@@ -21,6 +20,14 @@
 	.page__body {
 		font-size: 18px;
 	}
+}
+
+.page__c-mobile-header {
+	position: fixed;
+	top: 0;
+	right: 0;
+	left: 0;
+	z-index: 10;
 }
 
 .page__c-menu {
