--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -59,3 +59,4 @@
 @import "components/c-menu.css";
 @import "components/logotype.css";
 @import "components/c-mobile-header.css";
+@import "components/c-mobile-search.css";
