--- a/source/styles/components/filter.css
+++ b/source/styles/components/filter.css
@@ -1,60 +1,62 @@
-.check__input {
-	appearance: none;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	position: absolute;
-}
-
-.check__box {
-	padding: 6px 20px 6px 13px;
-	background-color: #fff;
+.tag__box {
+	padding: 6px 17px;
+	padding-right: 30px;
+	background-color: rgba(166, 167, 176, 1);
 	color: rgba(33, 41, 67, 1);
-	opacity: 0.5;
 	border-radius: 50px;
 	position: relative;
 }
 
-.check__box::before {
+.tag__box:hover {
+	cursor: pointer;
+}
+
+.tag__box::before {
 	content: '+';
 	position: absolute;
 	width: 1em;
 	height: 1em;
-	right: 0
+	right: 9px;
 }
-
-.check-radio__box {
-	padding: 9px 36px;
-	border-radius: 50px;
-	position: relative;
-}
-
-.check-radio__input:checked+.check-radio__box {
-border: 1px solid #FFFFFF;
-border-radius: 100px;
-}
-
 
 /* Checked */
-.check__input:checked+.check__box {
-	opacity: 1;
+.tag__input:checked+.tag__box {
+	background-color: #FFFFFF;
 	content: '✓';
 }
 
-.check__input:checked+.check__box::before {
+.tag__input:checked+.tag__box::before {
 	position: absolute;
 	content: '✓';
 	width: 1em;
 	height: 1em;
-	right: 0
+	right: 9px;
 }
 
-/* .check__input:focus+.check__box {
-	opacity: 1;
+.radio__box {
+--border-color: transparent;
+
+	padding: 9px 36px;
+	border-radius: 50px;
+	font-size: 16px;
+	border: 1px solid var(--border-color);
 }
 
-.check__input:disabled+.check__box {
-	opacity: 1;
-} */
+.radio__box:hover {
+	cursor: pointer;
+}
+
+.radio__input:checked+.radio__box {
+	--border-color: #FFFFFF;
+}
+
+
+
+
+
+
+
+
 
 
 .filter__all-desktop {
@@ -72,10 +74,8 @@ border-radius: 100px;
 }
 
 .filter__top {
-
 	display: inline-flex;
-	gap: 26px;
-	margin-bottom: 45px;
+	margin-bottom: 52px;
 }
 
 .filter__button {
@@ -104,8 +104,8 @@ border-radius: 100px;
 	display: flex;
 	flex-wrap: wrap;
 	gap: 10px;
-	padding-top: 10px;
-	margin-bottom: 20px;
+	padding-top: 26px;
+	margin-bottom: 56px;
 }
 
 .filter__time {
@@ -186,7 +186,6 @@ border-radius: 100px;
 	padding: 20px 16px;
 	background-color: rgba(49, 52, 76, 1);
 	display: flex;
-
 	justify-content: space-around;
 	position: relative;
 }
@@ -201,7 +200,6 @@ border-radius: 100px;
 	width: 9px;
 	top: 46%;
 	right: 5%;
-	/* transform: rotate(180deg); */
 	background-image: url('../images/footer/arrow.svg');
 	opacity: 0.5;
 }
@@ -300,7 +298,7 @@ border-radius: 100px;
 
 	.filter__inner {
 		display: flex;
-		justify-content: space-around;
+		justify-content: space-between;
 	}
 
 	.filter__top-inner {
@@ -309,7 +307,7 @@ border-radius: 100px;
 	}
 
 	.filter__level-inner {
-		max-width: 611px;
+		max-width: 595px;
 		width: 100%;
 	}
 }
