--- a/source/styles/components/main/hero.css
+++ b/source/styles/components/main/hero.css
@@ -4,7 +4,6 @@
 	background-position: bottom center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	padding: 15px 0;
 	position: relative;
 }
 
@@ -13,6 +12,8 @@
 	flex-direction: column;
 	align-items: center;
 	gap: 16px;
+	height: 100vh;
+	justify-content: center;
 }
 
 @media (min-width: 1220px) {
@@ -23,7 +24,6 @@
 
 .hero__title {
 	font-size: 34px;
-	padding-top: 86px;
 	max-width: 328px;
 	line-height: 105.5%;
 }
@@ -32,7 +32,6 @@
 	.hero__title {
 		font-size: 60px;
 		max-width: 934px;
-		padding-top: 400px;
 	}
 }
 
@@ -221,6 +220,8 @@
 	.hero__link-wallet_subject_metamask {
 		top: 15%;
 		left: 11%;
+		width: 75px;
+		height: 75px;
 		background-image: url('../images/main/hero/matamask.png');
 		background-color: #fff;
 		border-radius: 50%;
